# vegbank2

./: .gitignore  API_AUTHORIZATION.md  CONTRIBUTING.md  INSTALL.md  README.md  pyproject.toml  redocly.yaml  release-checklist.md  requirements.txt  upload.md  vegbank2-plans.md
.github/: dependabot.yml
.github/workflows/: deploy-api-docs.yml  python-app.yaml  uv-package-test.yml
api/: openapi.yml  shiny.yml  upload.yml
database/flyway/: README.md
database/migrations/: README.md
docker/: Dockerfile  README.md
helm/: Chart.yaml  PARAMETERS.md  README.md  pvc.yaml  values-cnpg.yaml  values-overrides-dev.yaml  values-overrides-vegbank-dev.yaml  values.yaml
helm/admin/: client-secrets.json  ezid-client-secret.yaml  pv--vegbankdb-init-cephfs-dev.yaml  pv--vegbankdb-init-cephfs.yaml  pvc--vegbankdb-init-dev.yaml  pvc--vegbankdb-init.yaml  secret-flask.yaml  secret-keycloak.yaml  secret-oidc.yaml  secret.yaml  values-cnpg.yaml
helm/backup/: README.md  scheduled-backup.yaml
helm/config/: gunicorn.conf.py
helm/docs/: API_AUTHORIZATION.md  api-authorization.md  db-recovery.md  prod-deployment.md
helm/examples/: pooler.yaml  values-overrides-dev-vb-dev.yaml  values-overrides-dev-vb.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
migrations/: 1_create_aggregrates.sql  2_create_extras.sql  4_drop_vegbank_views.sql  6_vegbank_populate_configtables.sql  V1.0__vegbank.sql  V1.10__create_admin_user.sql  V1.12__add_constraints.sql  V1.3__createIndices.sql  V1.4__drop_vegbank_views.sql  V1.6__vegbank_populate_configtables.sql  V1.8__create_vegbank_views.sql  V1.9__create_vegbank_views.sql
queries/: create_accession_code.sql  create_codes.sql  get_all_states_test_data.sql  get_community_concept_by_accession_code.sql  get_map_points.sql  get_obs_table.sql  get_obs_table_count.sql  get_observation_details.sql  get_plot_observation_by_accession_code.sql  get_plot_observations.sql  get_plot_observations_count.sql  get_plot_observations_full.sql  get_plot_observations_minimal.sql  get_taxon_observation_by_accession_code.sql  get_top_5_taxa_coverage.sql
queries/community_classification/: get_community_classification_by_accession_code.sql  get_community_classification_by_id.sql  (+5 more)
resources/: README.md  flyway.conf
sql-transformations/: INSTALL.md  add_currentaccepted_toconcept.sql  db_model_vegbank.xml  getvegbanksql.sh
src/api/: TESTING.md  (+1 more)
swagger/: vegbankapi.yml
tests/: test_auth.py  test_ezid.py  test_general.py  test_utilities.py  test_vegbank2_app.py  test_vegbank2_utilities.py  test_vegbankapi.py
vegbank/: client_secrets.json  config_template.py  table_defs_config.py  utilities.py  vegbankapi.py
(+429 files in other folders)
