[project]
name = "vegbank"
version = "2.0.0-alpha1"
description = "VegBank database and data access service"
authors = [
    "Robert Shelton <shelton@nceas.ucsb.edu>",
    "Dou Mok <mok@nceas.ucsb.edu>",
    "Jim Regetz <regetz@nceas.ucsb.edu>",
    "Matthew B. Jones <jones@nceas.ucsb.edu>"
    ]
license = "Apache2"
requires-python = ">=3.13"
readme = "README.md"

dependencies = [
    "psycopg>=3.3.2",
    "flask>=3.1.2",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "numpy>=2.4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pylint>=3.2.7",
    "black>=24.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
