[project]
name = "vegbank"
version = "2.1.2"
description = "VegBank database and data access service"
authors = [
    { name = "Robert Shelton", email = "shelton@nceas.ucsb.edu" },
    { name = "Dou Mok", email = "douming.mok@gmail.com" },
    { name = "Jim Regetz", email = "regetz@nceas.ucsb.edu" },
    { name = "Matthew B. Jones", email = "jones@nceas.ucsb.edu" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.13"

dependencies = [
    "psycopg>=3.3.2",
    "flask>=3.1.2",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "numpy>=2.4.2",
    "authlib>=1.6.8",
    "requests>=2.32.5",
    "adbc-driver-postgresql>=1.10.0",
    "gunicorn>=25.1.0",
    "lxml>=6.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pylint>=3.2.7",
    "black>=24.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vegbank"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
